# agile_snails_coding_challenge

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pylintrc  Agile_snails_visualization.py  CONTRIBUTING.md  LICENSE  README.md  agile_snails_coding_challenge.agile_snails_interface.csv  agile_snails_interface.py  agile_snails_interface_prof.txt  docker-compose.yml  dockerfile  dockerstart.sh  elexon-api-key.txt  environment.yml  metoffice-api-key.txt  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
dummy_data/: generation_template.csv  load.csv  load_template.csv  market_index.csv  met_office.json  met_office_template.json  weather_mock.csv
mongodb/: dockerfile
notebooks/: Bid submitter.ipynb  Building energy demand prediction.ipynb  MongoDB example.ipynb  WindPower.ipynb
sjautobidder/: __main__.py  cache.py  webserver.py
sjautobidder/autobidder/: autobidder_utils.py  scaler.p
sjautobidder/building_demand/: README.tex  energy_demand.py  energy_utils.py
sjautobidder/elexon_api/: README.tex  elexon_examples.py  elexon_utils.py
sjautobidder/met_office_api/: README.tex  api_interpolation.py  api_utils.py
sjautobidder/power_integration/: README.tex  power_estimation.py
tests/: test_api_utils.py  test_bidder_utils.py  test_building_energy_demand.py  test_building_energy_utils.py  test_cache.py  test_elexon_utils.py  test_power_estimation.py  test_site_utils.py.todo  test_solar_power.py
webpage/: .eslintrc.json  README.md  index.html  package.json  rollup.config.js  tsconfig.json
(+28 files in other folders)
