[metadata]
name = sjautobidder
version = 0.0.1
author = SLIMJaB
author_email =
description = Power prediction and automatic bidding application
long_description = file: README.md
keywords = power, machine learning, prediction, bidding, application
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Science/Research
	Intended Audience :: Other Audience
	License :: Other/Proprietary License
	Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Physics
license = Proprietary

[options]
packages = find:
zip_safe = True

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326

[pydocstyle]
convention = google
